finish single madlib functionality

--- a/MadLibs/Views/Home/Form.cshtml
+++ b/MadLibs/Views/Home/Form.cshtml
@@ -6,27 +6,29 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
-    <h1>Fill in the blanks of your custom mad lib!</h1>
-      <form action="/madlibspace" method="post">
+    <h1>Fill in the blanks of your Custom lib!</h1>
+      <form action= "/madlibone" method="post"> 
       <label for="name">a Name</label>
       <input id="name" name="name" type="text">
       <label for="sillyword">a Silly Word</label>
       <input id="sillyword" name="sillyword" type="text">
       <label for="number">a Number</label>
       <input id="number" name="number" type="text">
-      <label for="adjective-one">an Adjective</label>
-      <input id="adjective-one" name = "adjective-one" type="text">
-      <label for="adjective-two">an Adjective</label>
-      <input id="adjective-two" name = "adjective-two" type="text">
-      <label for="adjective-three">an Adjective</label>
-      <input id="adjective-three" name = "adjective-three" type="text">
-      <label for="adjective-four">an Adjective</label>
-      <input id="adjective-four" name="adjective-four" type="text">
-      <label for="adjective-five">an Adjective</label>
-      <input id="adjective-five" name="adjective-five" type="text">
+      <label for="adjectiveOne">an Adjective</label>
+      <input id="adjectiveOne" name = "adjectiveOne" type="text">
+      <label for="adjectiveTwo">an Adjective</label>
+      <input id="adjectiveTwo" name = "adjectiveTwo" type="text">
+      <label for="adjectiveThree">an Adjective</label>
+      <input id="adjectiveThree" name = "adjectiveThree" type="text">
+      <label for="adjectiveFour">an Adjective</label>
+      <input id="adjectiveFour" name="adjectiveFour" type="text">
+      <label for="adjectiveFive">an Adjective</label>
+      <input id="adjectiveFive" name="adjectiveFive" type="text">
       <label for="noun">a Noun</label>
       <input id="noun" name="noun" type="text">
-      <label for="relative">a Relative's name:</label>
+      <label for="verb">a Verb</label>
+      <input id="verb" name="verb" type="text">
+      <label for="relative">a Relative</label>
       <input id="relative" name="relative" type="text">
       <button type="submit">Mad Lib Me!</button>
     </form>
