--- a/MadLibs/Views/Home/MadLibOne.cshtml
+++ b/MadLibs/Views/Home/MadLibOne.cshtml
@@ -7,14 +7,14 @@
 </head>
 <body>
   <h1>Mad Lib in Space</h1>
-  <p>Hello, my name is astronaut @Model.Name. </p>
-  <p>I am on my way to planet @Model.SillyWord.</p>
-  <p>I will be gone for @Model.Number days.</p>  
-  <p>I am very @Model.AdjectiveOne about the trip but I will miss my @Model.Noun.</p>
-  <p>I have heard that the atmosphere there is @Model.AdjectiveTwo.</p>
-  <p>Luckily my @Model.Relative packed me a jacket to keep me @Model.AdjectiveThree.</p>
-  <p>When I land on the planet I will @Model.Verb for joy.</p>
-  <p>I am @Model.AdjectiveFour to walk on another planet.</p>
-  <p>I could not be more @Model.AdjectiveFive for this trip.</p>
+  <p>Hello, my name is astronaut @Model.WordOne. </p>
+  <p>I am on my way to planet @Model.WordTwo.</p>
+  <p>I will be gone for @Model.WordThree days.</p>  
+  <p>I am very @Model.WordFour about the trip but I will miss my @Model.WordFive.</p>
+  <p>I have heard that the atmosphere there is @Model.WordSix.</p>
+  <p>Luckily my @Model.WordSeven packed me a jacket to keep me @Model.WordEight.</p>
+  <p>When I land on the planet I will @Model.WordNine for joy.</p>
+  <p>I am @Model.WordTen to walk on another planet.</p>
+  <p>I could not be more @Model.WordEleven for this trip.</p>
 </body>
 </html>
