--- a/MadLibs/Views/Home/MadLibOne.cshtml
+++ b/MadLibs/Views/Home/MadLibOne.cshtml
@@ -7,14 +7,14 @@
 </head>
 <body>
   <h1>Mad Lib in Space</h1>
-  <p>Hello, my name is astronaut @Model.WordOne. </p>
-  <p>I am on my way to planet @Model.WordTwo.</p>
-  <p>I will be gone for @Model.WordThree days.</p>  
-  <p>I am very @Model.WordFour about the trip but I will miss my @Model.WordFive.</p>
-  <p>I have heard that the atmosphere there is @Model.WordSix.</p>
-  <p>Luckily my @Model.WordSeven packed me a jacket to keep me @Model.WordEight.</p>
-  <p>When I land on the planet I will @Model.WordNine for joy.</p>
-  <p>I am @Model.WordTen to walk on another planet.</p>
-  <p>I could not be more @Model.WordEleven for this trip.</p>
+  <p>Hello, my name is astronaut @Model.WordListDictionary[1]. </p>
+  <p>I am on my way to planet @Model.WordListDictionary[2].</p>
+  <p>I will be gone for @Model.WordListDictionary[3] days.</p>  
+  <p>I am very @Model.WordListDictionary[4] about the trip but I will miss my @Model.WordListDictionary[5].</p>
+  <p>I have heard that the atmosphere there is @Model.WordListDictionary[6].</p>
+  <p>Luckily my @Model.WordListDictionary[7]istDictionary[7] packed me a jacket to keep me @Model.WordListDictionary[7]istDictionary[8].</p>
+  <p>When I land on the planet I will @Model.WordListDictionary[9] for joy.</p>
+  <p>I am @Model.WordListDictionary[10] to walk on another planet.</p>
+  <p>I could not be more @Model.WordListDictionary[11] for this trip.</p>
 </body>
 </html>
