--- a/MadLibs/Views/Home/FormTwo.cshtml
+++ b/MadLibs/Views/Home/FormTwo.cshtml
@@ -10,28 +10,36 @@
       <form action= "/madlibtwo" method="post"> 
       <label for="name">a Name</label>
       <input id="name" name="name" type="text">
-            <label for="name">a Name</label>
-      <input id="name" name="name" type="text">
+      <label for="unrealisticprofession">an Unrealistic Profession</label>
+      <input id="unrealisticprofession" name="unrealisticprofession" type="text">
+      <label for="country">a Country</label>
+      <input id="country" name="country" type="text">
       <label for="sillyword">a Silly Word</label>
-      <input id="sillyword" name="sillyword" type="text">
-      <label for="number">a Number</label>
-      <input id="number" name="number" type="text">
-      <label for="adjectiveOne">an Adjective</label>
-      <input id="adjectiveOne" name = "adjectiveOne" type="text">
-      <label for="adjectiveTwo">an Adjective</label>
-      <input id="adjectiveTwo" name = "adjectiveTwo" type="text">
-      <label for="adjectiveThree">an Adjective</label>
-      <input id="adjectiveThree" name = "adjectiveThree" type="text">
-      <label for="adjectiveFour">an Adjective</label>
-      <input id="adjectiveFour" name="adjectiveFour" type="text">
-      <label for="adjectiveFive">an Adjective</label>
-      <input id="adjectiveFive" name="adjectiveFive" type="text">
-      <label for="noun">a Noun</label>
-      <input id="noun" name="noun" type="text">
+      <input id="sillyword" name = "sillyword" type="text">
+      <label for="color">an Color</label>
+      <input id="color" name = "color" type="text">
+      <label for="adjective">an Adjective</label>
+      <input id="adjective" name = "adjective" type="text">
+      <label for="adverb">an Adverb</label>
+      <input id="adverb" name="adverb" type="text">
+      <label for="sillynameone">a Silly Name</label>
+      <input id="sillynameone" name="sillynameone" type="text">
+      <label for="sillynametwo">another Silly Name</label>
+      <input id="sillynametwo" name="sillynametwo" type="text">
+      <label for="facialfeature">a Facial Feature</label>
+      <input id="facialfeature" name="facialfeature" type="text">
+      <label for="uscity">a U.S. City</label>
+      <input id="uscity" name="uscity" type="text">
+      <label for="sillynamethree">another Silly Name</label>
+      <input id="sillynamethree" name="sillynamethree" type="text">
       <label for="verb">a Verb</label>
       <input id="verb" name="verb" type="text">
-      <label for="relative">a Relative</label>
-      <input id="relative" name="relative" type="text">
+      <label for="nounone">a Noun</label>
+      <input id="nounone" name="nounone" type="text">
+      <label for="formerbadassactornowsellingout">a Former Badass Actor Now Selling Out</label>
+      <input id="formerbadassactornowsellingout" name="formerbadassactornowsellingout" type="text">
+      <label for="nountwo">another Noun</label>
+      <input id="nountwo" name="nountwo" type="text">
       <button type="submit">Mad Lib Me!</button>
     </form>
   </body>
