--- a/MadLibs/Views/Home/MadLibOne.cshtml
+++ b/MadLibs/Views/Home/MadLibOne.cshtml
@@ -12,7 +12,7 @@
   <p>I will be gone for @Model.WordListDictionary[3] days.</p>  
   <p>I am very @Model.WordListDictionary[4] about the trip but I will miss my @Model.WordListDictionary[5].</p>
   <p>I have heard that the atmosphere there is @Model.WordListDictionary[6].</p>
-  <p>Luckily my @Model.WordListDictionary[7]istDictionary[7] packed me a jacket to keep me @Model.WordListDictionary[7]istDictionary[8].</p>
+  <p>Luckily my @Model.WordListDictionary[7] packed me a jacket to keep me @Model.WordListDictionary[8].</p>
   <p>When I land on the planet I will @Model.WordListDictionary[9] for joy.</p>
   <p>I am @Model.WordListDictionary[10] to walk on another planet.</p>
   <p>I could not be more @Model.WordListDictionary[11] for this trip.</p>
