--- a/MadLibs/Views/Home/MadLibTwo.cshtml
+++ b/MadLibs/Views/Home/MadLibTwo.cshtml
@@ -7,15 +7,15 @@
 </head>
 <body>
   <h1>Generic Super Hero Movie</h1>
-  <p>Meet our hero @Model.Name, </p>
-  <p>a super-intelligent @Model.UnrealisticProfession.</p>
-  <p>A run-in with the @Model.Country military leads him to create his alter-ego @Model.SillyWord,</p>  
-  <p>a @Model.Color @Model.AdjectiveOne giant capable of great destruction.</p>
-  <p>He @Model.Adverb battles the military with his girlfriend @Model.SillyName.</p>
-  <p>Eventually it is discovered that our hero's long-time colleague @Model.SillyNameTwo, distinguished by his @Model.FacialFeature,</p>
-  <p>is trying to turn @Model.SillyWord into a weapon, leading to a climactic (if pointless) battle in</p>
-  <p>downtown @Model.UsCity with an evil version of the same giant alter-ego called @Model.SillyNameThree.</p>
-  <p>Eventually the enemey is subdued by @Model.Verb ing him with a @Model.Noun. In the final reel,</p>
-  <p>@Model.FormerBadassActorNowSellingOut appears to propose joining him in a @Model.NounTwo.</p>
+  <p>Meet our hero @Model.WordListDictionary[1], </p>
+  <p>a super-intelligent @Model.WordListDictionary[2].</p>
+  <p>A run-in with the @Model.WordListDictionary[3] military leads him to create his alter-ego @Model.WordListDictionary[4],</p>  
+  <p>a @Model.WordListDictionary[5] @Model.WordListDictionary[6] giant capable of great destruction.</p>
+  <p>He @Model.WordListDictionary[7] battles the military with his girlfriend @Model.WordListDictionary[8].</p>
+  <p>Eventually it is discovered that our hero's long-time colleague @Model.WordListDictionary[9], distinguished by his @Model.WordListDictionary[10],</p>
+  <p>is trying to turn @Model.WordListDictionary[11] into a weapon, leading to a climactic (if pointless) battle in</p>
+  <p>downtown @Model.WordListDictionary[12] with an evil version of the same giant alter-ego called @Model.WordListDictionary[13].</p>
+  <p>Eventually the enemey is subdued by @Model.WordListDictionary[14] ing him with a @Model.WordListDictionary[15]. In the final reel,</p>
+  <p>@Model.WordListDictionary[16] appears to propose joining him in a @Model.WordListDictionary[17].</p>
 </body>
 </html>
