--- a/MadLibs/Views/Home/MadLibOne.cshtml
+++ b/MadLibs/Views/Home/MadLibOne.cshtml
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+  <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mad Libs Party</title>
 </head>
 <body>
-  <h1>Mad Lib in Space</h1>
+  <div class="jumbotron">
+    <h1>Mad Lib in Space</h1> 
+  </div>
+
   <p>Hello, my name is astronaut @Model.WordListDictionary[1]. </p>
   <p>I am on my way to planet @Model.WordListDictionary[2].</p>
   <p>I will be gone for @Model.WordListDictionary[3] days.</p>  
