--- a/MadLibs/Views/Home/MadLibTwo.cshtml
+++ b/MadLibs/Views/Home/MadLibTwo.cshtml
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+  <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mad Libs Party</title>
 </head>
 <body>
-  <h1>Generic Super Hero Movie</h1>
+  <div class="jumbotron">
+    <h1>Generic Super Hero Movie</h1>
+  </div>
+  
   <p>Meet our hero @Model.WordListDictionary[1], </p>
   <p>a super-intelligent @Model.WordListDictionary[2].</p>
   <p>A run-in with the @Model.WordListDictionary[3] military leads him to create his alter-ego @Model.WordListDictionary[4],</p>  
