--- a/MadLibs/Views/Home/Form.cshtml
+++ b/MadLibs/Views/Home/Form.cshtml
@@ -4,9 +4,13 @@
     <meta charset='utf-8'>
     <title>Mad Lib Inputs</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
   </head>
   <body>
-    <h1>Fill in the blanks of your Custom lib!</h1>
+    <div class="jumbotron">
+      <h1>Fill in the blanks of your Custom lib!</h1>
+    </div>
+
       <form action= "/madlibone" method="post"> 
       <label for="name">a Name</label>
       <input id="name" name="name" type="text">
