--- a/MadLibs/Views/Home/Form.cshtml
+++ b/MadLibs/Views/Home/Form.cshtml
@@ -6,8 +6,8 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
   </head>
-  <body>
-    <div class="jumbotron">
+  <body id = "spaceBod">
+    <div class="jumbotron" id="spaceTron">
       <h1>Fill in the blanks of your Custom lib!</h1>
     </div>
 
