--- a/MadLibs/Views/Home/FormTwo.cshtml
+++ b/MadLibs/Views/Home/FormTwo.cshtml
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
     <title>Mad Lib Inputs</title>
   </head>
-  <body>
-    <div class="jumbotron">
+  <body id="superBod">
+  <div class="jumbotron animated bounceInDown" id="superTron">
       <h1>Fill in the blanks of your Custom lib!</h1> 
     </div>
 
@@ -16,35 +16,43 @@
       <input id="name" name="name" type="text">
       <label for="unrealisticprofession">an Unrealistic Profession</label>
       <input id="unrealisticprofession" name="unrealisticprofession" type="text">
+      <br>
       <label for="country">a Country</label>
       <input id="country" name="country" type="text">
       <label for="sillyword">a Silly Word</label>
       <input id="sillyword" name = "sillyword" type="text">
+      <br>
       <label for="color">an Color</label>
       <input id="color" name = "color" type="text">
       <label for="adjective">an Adjective</label>
       <input id="adjective" name = "adjective" type="text">
+      <br>
       <label for="adverb">an Adverb</label>
       <input id="adverb" name="adverb" type="text">
       <label for="sillynameone">a Silly Name</label>
       <input id="sillynameone" name="sillynameone" type="text">
+      <br>
       <label for="sillynametwo">another Silly Name</label>
       <input id="sillynametwo" name="sillynametwo" type="text">
       <label for="facialfeature">a Facial Feature</label>
       <input id="facialfeature" name="facialfeature" type="text">
+      <br>
       <label for="uscity">a U.S. City</label>
       <input id="uscity" name="uscity" type="text">
       <label for="sillynamethree">another Silly Name</label>
       <input id="sillynamethree" name="sillynamethree" type="text">
+      <br>
       <label for="verb">a Verb</label>
       <input id="verb" name="verb" type="text">
       <label for="nounone">a Noun</label>
       <input id="nounone" name="nounone" type="text">
+      <br>
       <label for="formerbadassactornowsellingout">a Former Badass Actor Now Selling Out</label>
       <input id="formerbadassactornowsellingout" name="formerbadassactornowsellingout" type="text">
       <label for="nountwo">another Noun</label>
       <input id="nountwo" name="nountwo" type="text">
-      <button type="submit">Mad Lib Me!</button>
+      <br>
+      <button id="button2" class="btn btn-animated" type="submit">Mad Lib Me!</button>
     </form>
   </body>
 </html>
