--- a/MadLibs/Views/Home/MadLibOne.cshtml
+++ b/MadLibs/Views/Home/MadLibOne.cshtml
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mad Libs Party</title>
 </head>
-<body>
-  <div class="jumbotron">
+<body id="spaceBod">
+  <div class="jumbotron animated bounceInDown" id="spaceTron">
     <h1>Mad Lib in Space</h1> 
   </div>
 
