--- a/MadLibs/Views/Home/MadLibTwo.cshtml
+++ b/MadLibs/Views/Home/MadLibTwo.cshtml
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mad Libs Party</title>
 </head>
-<body>
-  <div class="jumbotron">
+<body id="superBod">
+  <div class="jumbotron animated bounceInDown" id="superTron">
     <h1>Generic Super Hero Movie</h1>
   </div>
   
