--- a/MadLibs/Views/Home/MadLibTwo.cshtml
+++ b/MadLibs/Views/Home/MadLibTwo.cshtml
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-  <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mad Libs Party</title>
-</head>
-<body id="superBod">
-  <div class="jumbotron animated bounceInDown" id="superTron">
-    <h1>Generic Super Hero Movie</h1>
-  </div>
-  
-  <p>Meet our hero @Model.WordListDictionary[1], </p>
-  <p>a super-intelligent @Model.WordListDictionary[2].</p>
-  <p>A run-in with the @Model.WordListDictionary[3] military leads him to create his alter-ego @Model.WordListDictionary[4],</p>  
-  <p>a @Model.WordListDictionary[5] @Model.WordListDictionary[6] giant capable of great destruction.</p>
-  <p>He @Model.WordListDictionary[7] battles the military with his girlfriend @Model.WordListDictionary[8].</p>
-  <p>Eventually it is discovered that our hero's long-time colleague @Model.WordListDictionary[9], distinguished by his @Model.WordListDictionary[10],</p>
-  <p>is trying to turn @Model.WordListDictionary[4] into a weapon, leading to a climactic (if pointless) battle in</p>
-  <p>downtown @Model.WordListDictionary[11] with an evil version of the same giant alter-ego called @Model.WordListDictionary[12].</p>
-  <p>Eventually the enemey is subdued by @Model.WordListDictionary[13] ing him with a @Model.WordListDictionary[14]. In the final reel,</p>
-  <p>@Model.WordListDictionary[15] appears to propose joining him in a @Model.WordListDictionary[16].</p>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mad Libs Party</title>
+  </head>
+  <body id="superBod">
+    <div class="jumbotron animated bounceInDown" id="superTron">
+      <h1>Generic Super Hero Movie</h1>
+    </div>
+    <div id="superOutput" class="animated bounceInRight">
+      <p>Meet our hero @Model.WordListDictionary[1], </p>
+      <p>a super-intelligent @Model.WordListDictionary[2].</p>
+      <p>A run-in with the @Model.WordListDictionary[3] military leads him to create his alter-ego @Model.WordListDictionary[4],</p>  
+      <p>a @Model.WordListDictionary[5] @Model.WordListDictionary[6] giant capable of great destruction.</p>
+      <p>He @Model.WordListDictionary[7] battles the military with his girlfriend @Model.WordListDictionary[8].</p>
+      <p>Eventually it is discovered that our hero's long-time colleague @Model.WordListDictionary[9], distinguished by his @Model.WordListDictionary[10],</p>
+      <p>is trying to turn @Model.WordListDictionary[4] into a weapon, leading to a climactic (if pointless) battle in</p>
+      <p>downtown @Model.WordListDictionary[11] with an evil version of the same giant alter-ego called @Model.WordListDictionary[12].</p>
+      <p>Eventually the enemey is subdued by @Model.WordListDictionary[13] ing him with a @Model.WordListDictionary[14]. In the final reel,</p>
+      <p>@Model.WordListDictionary[15] appears to propose joining him in a @Model.WordListDictionary[16].</p>
+    </div>
+  </body>
 </html>
