--- a/MadLibs/Views/Home/home.cshtml
+++ b/MadLibs/Views/Home/home.cshtml
@@ -10,11 +10,15 @@
     <div class="jumbotron animated bounceInDown">
       <h1>Choose your theme!</h1>
     </div>
-    
-    <a href="/form">Space theme</a>
 
-    <a href="/formtwo">SuperHero Theme</a>
-    
+    <form action="/form">
+      <button id="button2" class="btn btn-animated" type="submit">Space theme</button>
+    </form>
+
+    <form action="/formtwo">
+      <button id="button2" class="btn btn-animated" type="submit">Superhero theme</button>
+    </form>
+
 
   </body>
 </html>
