finish button functionality

--- a/MadLibs/Views/Home/Form.cshtml
+++ b/MadLibs/Views/Home/Form.cshtml
@@ -34,7 +34,11 @@
       <input id="verb" name="verb" type="text">
       <label for="relative">a Relative</label>
       <input id="relative" name="relative" type="text">
-      <button type="submit">Mad Lib Me!</button>
+      <button id="button2" class="btn btn-animated" type="submit">Mad Lib Me!</button>
+    </form>
+
+    <form action="/">
+      <button id="button2" class="btn btn-animated" type="submit">Home</button>
     </form>
   </body>
 </html>
