--- a/MadLibs/Views/Home/FormTwo.cshtml
+++ b/MadLibs/Views/Home/FormTwo.cshtml
@@ -11,7 +11,7 @@
       <h1>Fill in the blanks of your Custom lib!</h1> 
     </div>
 
-      <form action= "/madlibtwo" method="post"> 
+      <form id="superForm" class="animated bounceInRight" action= "/madlibtwo" method="post"> 
       <label for="name">a Name</label>
       <input id="name" name="name" type="text">
       <label for="unrealisticprofession">an Unrealistic Profession</label>
@@ -53,6 +53,9 @@
       <input id="nountwo" name="nountwo" type="text">
       <br>
       <button id="button2" class="btn btn-animated" type="submit">Mad Lib Me!</button>
+    </form>
+    <form action="/">
+      <button id="button2" class="btn btn-animated" type="submit">Home</button>
     </form>
   </body>
 </html>
