--- a/MadLibs/Views/Home/MadLibOne.cshtml
+++ b/MadLibs/Views/Home/MadLibOne.cshtml
@@ -21,5 +21,9 @@
   <p>When I land on the planet I will @Model.WordListDictionary[9] for joy.</p>
   <p>I am @Model.WordListDictionary[10] to walk on another planet.</p>
   <p>I could not be more @Model.WordListDictionary[11] for this trip.</p>
+
+  <form action="/">
+    <button id="button2" class="btn btn-animated" type="submit">Home</button>
+  </form>
 </body>
 </html>
