--- a/MadLibs/Views/Home/MadLibTwo.cshtml
+++ b/MadLibs/Views/Home/MadLibTwo.cshtml
@@ -23,5 +23,8 @@
       <p>Eventually the enemey is subdued by @Model.WordListDictionary[13] ing him with a @Model.WordListDictionary[14]. In the final reel,</p>
       <p>@Model.WordListDictionary[15] appears to propose joining him in a @Model.WordListDictionary[16].</p>
     </div>
+    <form action="/">
+      <button id="button2" class="btn btn-animated" type="submit">Home</button>
+    </form>
   </body>
 </html>
